--- a/plugins/template-work/skills/create-project/template/project/root/index.html
+++ b/plugins/template-work/skills/create-project/template/project/root/index.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-    <div id="app">hello world</div>
-    <script src="app.js"></script>
+    <div id="root">hello world</div>
+    <script type="module" src="src/frontend/main.tsx"></script>
 </body>
 </html>
